--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,12 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.logo_place_header {
+.header__logo_place_header {
   position: absolute;
   width: 228px;
   height: 32px;
-  margin: 30px 64px;
+  top: 30px;
+  left: 64px;
 }
 
 .header {
@@ -22,6 +23,7 @@
 }
 
 .header__title {
+  margin: 0 auto;
   width: 730px;
   margin-left: 64px;
   line-height: 96px;
@@ -32,6 +34,7 @@
 }
 
 .header__subtitle {
+  margin: 0 auto;
   width: 388px;
   position: absolute;
   bottom: 30px;
@@ -55,7 +58,7 @@
   width: 568px;
   background-color: #2f80ed;
   position: absolute;
-  right: 0px;
+  right: 0;
   top: 64px;
 }
 
@@ -74,6 +77,7 @@
 }
 
 .two-columns__brief {
+  margin: 0 auto;
   color: #2f80ed;
   width: 175px;
   line-height: 1.2;
@@ -94,10 +98,15 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin: 0 auto 30px;
+}
+
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .digits {
@@ -149,16 +158,17 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 20px;
+  margin: 20px auto 0;
 } 
 
 .feynman {
   background-color: #f2f2f2;
   position: relative;
-  height: 890px;
+  min-height: 890px;
 }
 
 .feynman__title {
+  margin: 0 auto;
   padding-top: 100px;
   text-align: center;
   line-height: 1.15;
@@ -166,8 +176,6 @@
   font-weight: 600;
   width: 648px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   z-index: 1;
 
@@ -188,7 +196,7 @@
   height: 637px;
   position: absolute;
   left: auto;
-  top: 253px;
+  bottom: 0;
 }
 
 .feynman__link {
@@ -218,15 +226,16 @@
   position: absolute;
   top: 0px;
   right: -210px;
+  background-image: url(../images/kaufman-triangle.svg);
 }
 
-.section-title_dark {
+.section-title_theme_dark {
   color: white;
   width: 60%;
-  padding-top: 90px;
+  padding: 90px 0 20px;
 }
 
-.section-subtitle_dark {
+.section-subtitle_theme_dark {
   color: white;
   width: 60%;
 }
@@ -234,7 +243,6 @@
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
   margin-top: 80px;
 } 
 /* */
@@ -245,7 +253,8 @@
   display: flex;
   background-color:  #1f1f1f;
   min-height: 350px;
-  padding: 60px auto 40px;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
 }
 
 .footer__columns {
@@ -259,15 +268,17 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
-.logo_place_footer {
+.footer__logo_place_footer {
   width: 228px;
   height: 32px;
 }
 
-.footer__column_links {
-  list-style-type: none;
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_copyright {
@@ -278,16 +289,16 @@
 }
 
 .footer__column-heading {
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
 }
 
 .footer__social-icon {
-  display: inline-block;
   width: 16px;
   height: 16px;
+  margin-top: 10px;
 }
 
 .footer__column-link {
@@ -296,5 +307,5 @@
   font-weight: normal;
   text-decoration: none;
   color: white;
-  margin: 0 auto;
+  margin: 0;
 }
