--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header__logo_place_header {
+.logo_place_header {
   position: absolute;
   width: 228px;
   height: 32px;
@@ -29,7 +29,7 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
-  z-index: 2;
+  z-index: 3;
   align-self: center;
 }
 
@@ -42,6 +42,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .header__main-illustration {
@@ -77,7 +78,7 @@
 }
 
 .two-columns__brief {
-  margin: 0 auto;
+  margin: 0;
   color: #2f80ed;
   width: 175px;
   line-height: 1.2;
@@ -136,6 +137,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
+  z-index: 1;
 }
 
 .section-subtitle {
@@ -145,6 +147,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  z-index: 1;
 }
 
 .table__heading {
@@ -224,9 +227,10 @@
   width: 877px;
   height: 877px;
   position: absolute;
-  top: 0px;
+  top: 0;
   right: -210px;
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
 }
 
 .section-title_theme_dark {
@@ -268,10 +272,10 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
+  margin: 18px 0;
 }
 
-.footer__logo_place_footer {
+.logo_place_footer {
   width: 228px;
   height: 32px;
 }
