--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,10 +1,11 @@
 .feynman__title {
-    margin: 0 auto;
+    margin: 90px auto 0;
     text-align: center;
     line-height: 1.15;
     font-size: 120px;
     font-weight: 600;
-    width: 648px;
+    max-width: 648px;
+    width: 100%;
     display: block;
     position: relative;
     z-index: 1;
