--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,5 +1,7 @@
 .feynman {
+    margin: 0 auto;
     background-color: #f2f2f2;
     position: relative;
     min-height: 890px;
+    padding-top: 10px; 
   }
