Исправлены feynman и table__cell

--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,5 +1,5 @@
 .feynman__title {
-    margin: 90px auto 0;
+    margin: 0 auto;
     text-align: center;
     line-height: 1.15;
     font-size: 120px;
