--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -3,5 +3,6 @@
     background-color: #f2f2f2;
     position: relative;
     min-height: 890px;
-    padding-top: 10px; 
+    padding-top: 100px;
+    box-sizing: border-box;
   }
